--- a/index.html
+++ b/index.html
@@ -1,1 +1,70 @@
-Hello World
+<html lang="en">
+<head>
+    <title>Google SignIn</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <meta name="google-signin-scope" content="profile email https://www.googleapis.com/auth/drive">
+
+    <meta name="google-signin-client_id" content="691888543265-8vpvtnfnr5f7fjsffvrqmhe09fhl0kj7.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script>
+        function onSignIn(googleUser) {
+            var profile = googleUser.getBasicProfile();
+            $(".g-signin2").css('display', 'none')
+            $(".data").css('display', 'block')
+            $("#pic").attr("src", profile.getImageUrl())
+            $("#email").text(profile.getEmail())
+        }
+
+        function signOut() {
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function() {
+                // alert('You have been successfully signed out');
+
+                $(".g-signin2").css('display','block')
+                $(".data").css('display', 'none')
+            });
+        }
+    </script>
+    <style>
+        .g-signin2 {
+            margin-left:500px;
+            margin-top:200px;
+        }
+        .data {
+            display: none;
+        }
+    </style>
+</head>
+<body>
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <div class="data">
+        <p>Profile Details</p>
+        <img id="pic" class="img-circle" width="100" height="100" />
+        <p>Email Address</p>
+        <p id="email" class="alert alert-danger"></p>
+        <button onclick="signOut()" class="btn btn-danger">SignOut</button>
+    </div>
+
+
+<!--<div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>-->
+<!--<script>-->
+    <!--function onSignIn(googleUser) {-->
+        <!--// Useful data for your client-side scripts:-->
+        <!--var profile = googleUser.getBasicProfile();-->
+        <!--console.log("ID: " + profile.getId()); // Don't send this directly to your server!-->
+        <!--console.log('Full Name: ' + profile.getName());-->
+        <!--console.log('Given Name: ' + profile.getGivenName());-->
+        <!--console.log('Family Name: ' + profile.getFamilyName());-->
+        <!--console.log("Image URL: " + profile.getImageUrl());-->
+        <!--console.log("Email: " + profile.getEmail());-->
+
+        <!--// The ID token you need to pass to your backend:-->
+        <!--var id_token = googleUser.getAuthResponse().id_token;-->
+        <!--console.log("ID Token: " + id_token);-->
+    <!--};-->
+<!--</script>-->
+</body>
+</html>
