--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html lang="en">
 <head>
-    <title>Google SignIn</title>
+    <title>ORGanizer</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <meta name="google-signin-scope" content="profile email https://www.googleapis.com/auth/drive">
 
-    <meta name="google-signin-client_id" content="691888543265-8vpvtnfnr5f7fjsffvrqmhe09fhl0kj7.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" content="955915951176-v9nvs56thkpg7l51palu1g751cacmkhf.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
