--- a/jq_proba/opentxt.html
+++ b/jq_proba/opentxt.html
@@ -109,7 +109,7 @@
 <script>
     function init() {
         SystemJS.config({
-            baseURL: "/org_html/jq_proba",
+            baseURL: "/jq_proba",
             packages: {
                 "/": {defaultExtension: "js"}
             }
